# asterik-backend

./: .env.example  .gitignore  README.md
app/: main.py
app/api/: filters.py  generations.py  quota_routes.py  stripe_routes.py
app/core/: auth.py  config.py  quota.py  supabase.py
app/engines/: gemini.py  hybrid.py  watermark.py
app/models/: schemas.py
backend/: .gitignore  README.md  nixpacks.toml  pyproject.toml
backend/app/: main.py
backend/app/api/: filters.py  generations.py  uploads.py
backend/app/core/: config.py
backend/app/engines/: hybrid.py  lut.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/catalog/: page.tsx
frontend/app/editor/: page.tsx
frontend/app/filters/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/offline/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/upgrade/: page.tsx
frontend/components/: before-after-slider.tsx  bottom-nav.tsx  engine-switch.tsx  filter-canvas.tsx  image-uploader.tsx  register-sw.tsx  save-filter-dialog.tsx  share-buttons.tsx
frontend/lib/: api.ts  filter-gradient.ts  supabase.ts
frontend/public/: manifest.webmanifest  sw.js
supabase/migrations/: 0001_init.sql  0002_likes_favorites.sql
